--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.15.0",
+    "@types/aws-lambda": "^8.10.76",
     "@types/node": "^15.3.0",
     "@types/uuid": "^8.3.0",
     "prettier": "^2.3.0",
