--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "test": "tests"
   },
   "scripts": {
-    "build": "rm -rf ./dist && tsc && sam build",
-    "dev": "npm run build && sam local start-api",
+    "watch": "tsc -w --preserveWatchOutput",
+    "build": "rm -rf ./dist && tsc",
+    "sam-build": "sam build",
+    "dev-server": "npm run build && sam local start-api",
     "deploy": "npm run build && sam deploy",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "aws-sdk": "^2.907.0",
@@ -20,9 +22,15 @@
   "devDependencies": {
     "@aws-sdk/types": "^3.15.0",
     "@types/aws-lambda": "^8.10.76",
+    "@types/faker": "^5.5.5",
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.3.0",
     "@types/uuid": "^8.3.0",
+    "faker": "^5.5.3",
+    "jest": "^26.6.3",
     "prettier": "^2.3.0",
+    "ts-jest": "^26.5.6",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
