--- a/template.yaml
+++ b/template.yaml
@@ -21,7 +21,7 @@ Resources:
   CreateItemFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: dist/index.createItemHandler
+      Handler: dist/src/index.createItemHandler
       Description: Handle
       Runtime: nodejs14.x
       MemorySize: 1024
