--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .aws-sam
 samconfig.toml
 dist
+env.json
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
