--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "build": "rm -rf ./dist && tsc",
     "sam-build": "sam build",
     "dev-server": "npm run build && sam local start-api",
-    "deploy": "npm run build && sam deploy",
-    "test": "jest"
+    "deploy": "npm run build && npm run sam-build && sam deploy",
+    "test": "jest --clearCache && jest"
   },
   "dependencies": {
     "aws-sdk": "^2.907.0",
-    "uuid": "^3.3.2"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@aws-sdk/types": "^3.15.0",
     "@types/aws-lambda": "^8.10.76",
     "@types/faker": "^5.5.5",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.3.0",
+    "@types/node": "^15.6.1",
     "@types/uuid": "^8.3.0",
     "faker": "^5.5.3",
-    "jest": "^26.6.3",
+    "jest": "^27.0.3",
     "prettier": "^2.3.0",
-    "ts-jest": "^26.5.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   }
 }
